<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    android:orientation="vertical" >



    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <EditText
                android:id="@+id/filmEditName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="15dp"
                android:background="@android:color/white"
                android:ellipsize="start"
                android:ems="10"
                android:gravity="center_horizontal"
                android:textColorHint="@android:color/darker_gray"
                android:hint="@string/strEnterName"
                android:inputType="textCapSentences"

                android:padding="10dp"
                android:textColor="@android:color/background_dark" >

                <requestFocus />
            </EditText>





            <Spinner
                android:id="@+id/filmSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_showAll"
                android:layout_gravity="center_horizontal"
                android:id="@+id/filmCbShowAll"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp" />

            <Button
                android:id="@+id/filmBtnRemember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/str_set_date" />

            <RatingBar
                android:id="@+id/filmRatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:numStars="10"
                android:stepSize="1.0" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_saw_today"
                android:layout_gravity="center_horizontal"
                android:id="@+id/filmCbToday"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stay_thinking"
                android:id="@+id/filmBtnCall"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/filmBtnOk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginRight="5dp"
                    android:padding="10dp"
                    android:text="@string/strOk" />

                <Button
                    android:id="@+id/filmBtnCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="5dp"
                    android:padding="10dp"
                    android:text="@string/strCancel" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/icon_stop"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/film_iv" />
            </LinearLayout>

            </LinearLayout>
    </ScrollView>



</LinearLayout>